--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
+            <scope>5.1.35</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
