--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/driving_school_system
+    url: jdbc:mysql://localhost:3306/driving_school_system?useUnicode=true&amp;characterEncoding=utf8
     username: root
     password: rootroot
     driver-class-name: com.mysql.jdbc.Driver
