--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,36 @@
 server:
+  servlet:
+    context-path: /driving-school
   port: 9080
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/driving_school_system?useUnicode=true&amp;characterEncoding=utf8
+    url: jdbc:mysql://localhost:3306/driving_school_system?useUnicode=true&characterEncoding=utf-8
     username: root
-    password: rootroot
+    password: suntek
     driver-class-name: com.mysql.jdbc.Driver
 
+---
 
+spring:
+ jackson:
+    default-property-inclusion: non_null
+    time-zone: GMT+8
+    date-format: yyyy-MM-dd HH:mm:ss
+    serialization:
+     INDENT_OUTPUT: true
+
+mybatis:
+  typeAliasesPackage: com.bin.design.drivingschool.entity
+  mapperLocations: classpath:com/bin/design/drivingschool/mapper/*.xml
+
+logging:
+  #  config: classpath:logback-spring.xml
+  level:
+    root: warn
+    org.springframework: info
+    org.mybatis: info
+    com.bin.design.drivingschool: debug
 
 
 
