--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 server:
   servlet:
     context-path: /driving-school
-  port: 9080
+  port: 8081
 
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/driving_school_system?useUnicode=true&characterEncoding=utf-8
     username: root
-    password: suntek
+    password: rootroot
     driver-class-name: com.mysql.jdbc.Driver
 
 ---
