--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/driving_school_system?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/driving_school_system?useUnicode=true&tinyInt1isBit=false&characterEncoding=utf-8
     username: root
     password: rootroot
     driver-class-name: com.mysql.jdbc.Driver
@@ -13,7 +13,9 @@ spring:
 ---
 
 spring:
- jackson:
+  thymeleaf:
+    cache: false
+  jackson:
     default-property-inclusion: non_null
     time-zone: GMT+8
     date-format: yyyy-MM-dd HH:mm:ss
