--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/driving_school_system?useUnicode=true&tinyInt1isBit=false&characterEncoding=utf-8
     username: root
-    password: rootroot
+    password: suntek
     driver-class-name: com.mysql.jdbc.Driver
 
 ---
