--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,19 @@
             <artifactId>poi-ooxml</artifactId>
             <version>3.7</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.4.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.30</version>
+        </dependency>
+
     </dependencies>
 
     <build>
