--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
             <version>1.2.30</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.6</version>
+        </dependency>
+
     </dependencies>
 
     <build>
